refactor(websocket):重构WebSocket认证与消息处理逻辑- 移除过时的EmailServiceImplTest测试类- 添加JWT认证拦截器，验证用户身份- 更新WebSocket配置，注入JwtUtil和UserRepository - 修改FrontEndWebSocketHandler为@AllArgsConstructor并移除无用依赖 - 调整QuestionAnsweringApplicationService，移除事务注解与事件监听 - 更新RedisKey工具类，新增用户相关key生成方法 - 在UserApplicationService中使用RedisKey工具类管理用户缓存