@@ -1,6 +1,13 @@
 package host.hunger.vocalchat.api.websocket.interceptor;
 
+import host.hunger.vocalchat.domain.model.user.User;
 import host.hunger.vocalchat.domain.model.user.UserId;
+import host.hunger.vocalchat.domain.repository.UserRepository;
+import host.hunger.vocalchat.infrastructure.util.JwtUtil;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.server.ServerHttpRequest;
 import org.springframework.http.server.ServerHttpResponse;
 import org.springframework.http.server.ServletServerHttpRequest;
@@ -9,18 +16,30 @@ import org.springframework.web.socket.server.HandshakeInterceptor;
 
 import java.util.Map;
 
+@AllArgsConstructor
 public class FrontEndWebSocketInterceptor implements HandshakeInterceptor {
+
+    private final JwtUtil jwtUtil;
+    private final UserRepository userRepository;
+
     @Override
     public boolean beforeHandshake(ServerHttpRequest request, ServerHttpResponse response, WebSocketHandler wsHandler, Map<String, Object> attributes) throws Exception {
-        if(request instanceof ServletServerHttpRequest){
             ServletServerHttpRequest servletRequest = (ServletServerHttpRequest) request;
-            String userId = servletRequest.getServletRequest().getParameter("userId");
-
-            if (userId != null && !userId.trim().isEmpty()){
-                attributes.put("userId",new UserId(userId));
+            String token = servletRequest.getServletRequest().getParameter("token");
+            if (token == null || token.isBlank()) {
+                response.setStatusCode(HttpStatus.UNAUTHORIZED);
+                return false;
             }
-        }
-        return true;
+            String id = jwtUtil.resolveToken(token);
+            UserId userId = new UserId(id);
+            // 根据 code 字段查询用户
+            User user = userRepository.findById(userId);
+            if (user == null) {
+                response.setStatusCode(HttpStatus.UNAUTHORIZED);
+                return false;
+            }
+            attributes.put(userId.toString(), user);
+            return true;
     }
 
     @Override
